[package]
name = "bevy_geo_frames"
version = "0.1.0"
edition = "2021"

[lib]
name = "bevy_geo_frames"
path = "src/lib.rs"

[dependencies]
bevy = "0.17"
big_space = { version = "0.5.0", optional = true }
map_3d = "0.1.5"
serde = { version = "1", features = ["derive"], optional = true }

[features]
serde = ["dep:serde"]
big_space = ["dep:big_space"]

[dev-dependencies]
bevy_editor_cam = "0.7"
bevy_infinite_grid = "0.17"
