[package]
name = "bevy_world_mesh"
description = "Large-scale real-world terrain renderer for Bevy (UDLOD + Chunked Clipmap)."
version = "0.1.0"
license = "Apache-2.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/elodin-sys/world_mesh"
homepage = "https://github.com/elodin-sys/world_mesh"
documentation = "https://docs.rs/bevy_world_mesh"
keywords = ["gamedev", "graphics", "bevy", "terrain", "rendering"]
categories = ["game-engines", "rendering", "graphics"]
exclude = ["assets/terrains/*", "screenshots/*", "context/*"]
publish = false
default-run = "world_mesh"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["terrain"]
# Core renderer. Pulls in the TIFF asset loader, `DebugTerrainMaterial`,
# `TerrainDebugPlugin`, `EnvScreenshotPlugin` (the renderer's shader
# specializer reads `DebugTerrain` directly, so the debug plumbing is
# not worth a separate feature flag).
terrain = []
# Double-precision camera via `big_space`. Required for Earth-radius scenes.
high_precision = ["dep:big_space"]
# Slippy-tile HTTP fetcher + on-disk cache + provider-specific decoders.
# `indicatif` and `rayon` drive the concurrent fetch progress UI in
# `src/bin/fetch_real_terrain.rs`; both are pulled into the fetch surface
# so the public `TileFetcher` stats are usable from any consumer that
# enables the `fetch` feature.
fetch = ["dep:ureq", "dep:indicatif", "dep:rayon"]
# Region preset catalogue (Brienz, Death Valley, ...).
regions = ["dep:toml", "dep:serde"]
# End-to-end scene plugins (PlanarScenePlugin, GlobeScenePlugin).
scenes = ["regions", "high_precision"]
# FBM procedural noise generators for the `synthesize_*` binaries.
synth = ["dep:noise"]

[dependencies]
bevy.workspace = true

# `terrain` (default): the renderer itself.
ndarray = "0.15"
itertools = "0.12"
image = "0.25"
tiff = "0.9"
lru = "0.12"
bitflags = "2.4"
bytemuck = "1.14"
anyhow = "1.0"
bincode = "2.0.0-rc.3"
async-channel = "2.1"

# Optional — gated behind feature flags.
big_space = { version = "0.12", optional = true, default-features = false, features = ["camera", "debug"] }
ureq = { version = "2", optional = true, default-features = false, features = ["tls"] }
indicatif = { version = "0.18", optional = true }
rayon = { version = "1", optional = true }
toml = { version = "0.8", optional = true }
serde = { version = "1", optional = true, features = ["derive"] }
noise = { version = "0.9", optional = true }

# Binaries -----------------------------------------------------------------

[[bin]]
name = "world_mesh"
path = "src/main.rs"
required-features = ["scenes"]

[[bin]]
name = "world_mesh_globe"
path = "src/bin/world_mesh_globe.rs"
required-features = ["scenes"]

[[bin]]
name = "preprocess"
path = "src/bin/preprocess.rs"
required-features = ["scenes"]

[[bin]]
name = "preprocess_global"
path = "src/bin/preprocess_global.rs"
required-features = ["scenes"]

[[bin]]
name = "fetch_real_terrain"
path = "src/bin/fetch_real_terrain.rs"
required-features = ["fetch", "regions", "scenes"]

[[bin]]
name = "fetch_global_spherical"
path = "src/bin/fetch_global_spherical.rs"
required-features = ["fetch", "scenes"]

[[bin]]
name = "synthesize_height"
path = "src/bin/synthesize_height.rs"
required-features = ["synth"]

[[bin]]
name = "synthesize_spherical_faces"
path = "src/bin/synthesize_spherical_faces.rs"
required-features = ["synth"]

# Examples -----------------------------------------------------------------

[[example]]
name = "preprocess_planar"
path = "examples/preprocess_planar.rs"
required-features = ["bevy/embedded_watcher"]

[[example]]
name = "minimal"
path = "examples/minimal.rs"
required-features = ["high_precision", "bevy/embedded_watcher"]

[[example]]
name = "planar"
path = "examples/planar.rs"
required-features = ["high_precision", "bevy/embedded_watcher"]

[[example]]
name = "preprocess_spherical"
path = "examples/preprocess_spherical.rs"
required-features = ["bevy/embedded_watcher"]

[[example]]
name = "spherical"
path = "examples/spherical.rs"
required-features = ["high_precision", "bevy/embedded_watcher"]
