[package]
name = "conduit"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["bevy", "rand", "std", "embedded-io-async"]
tokio = ["dep:tokio", "tokio-util", "futures", "tracing"]
bevy = ["dep:bevy", "flume", "big_space", "tracing"]
nox = ["dep:nox"]
rand = ["fastrand"]
well-known = ["nalgebra"]
std = ["bytes/std", "postcard/use-std", "ndarray/std", "well-known"]

[dependencies]
# serialize
postcard.version = "1.0.8"
postcard.features = ["alloc"]
serde.version = "1.0"
serde.features = ["derive"]

num_enum = "0.7.1"
bytemuck.version = "1.14"
bytemuck.features = ["derive"]

# async
tokio.version = "1.34"
tokio.features = ["full"]
tokio.optional = true
tokio-util.version = "0.7"
tokio-util.features = ["codec"]
tokio-util.optional = true
futures.version = "0.3.29"
futures.optional = true

# bevy
bevy.version = "0.13"
bevy.default_features = false
bevy.features = ["bevy_pbr", "bevy_scene"]
bevy.optional = true
big_space.git = "https://github.com/elodin-sys/big_space.git"
big_space.branch = "no_prop_rot"
big_space.optional = true
flume.version = "0.11"
flume.optional = true

# log
tracing.version = "0.1"
tracing.optional = true

# hash
const-fnv1a-hash = "1.1.0"

# error
thiserror-no-std = "2.0.2"
thiserror = "1"

# nox
nox.path = "../nox"
nox.optional = true

# rand
fastrand.version = "2"
fastrand.optional = true

# well-known
nalgebra.version = "0.32"
nalgebra.features = ["serde-serialize", "bytemuck"]
nalgebra.optional = true

# types
smallvec.version = "1.11.2"
smallvec.features = ["const_generics", "union", "serde"]
ndarray.version = "0.15"
ndarray.features = ["serde"]
ndarray.default_features = false
bytes.version = "1.5"
bytes.features = ["serde"]
bytes.default_features = false
try_buf = "0.1.3"
hashbrown = "0.14.3"


# embedded-async
embedded-io-async.version = "0.6.1"
embedded-io-async.optional = true
