[package]
name = "cranelift-mlir"
license = "MIT OR Apache-2.0"
version.workspace = true
edition = "2024"
publish = false

[features]
default = []
# Opt-in Tracy zone emission for cranelift-mlir's live profiling layer.
# Orthogonal to `ELODIN_CRANELIFT_DEBUG_DIR`: zones only emit when both
# the feature is built and the env var is set. See PERFORMANCE.md for
# the `nix develop .#tracy && just install tracy` workflow.
tracy = ["dep:tracy-client"]

[dependencies]
cranelift-codegen = "0.130"
cranelift-frontend = "0.130"
cranelift-jit = "0.130"
cranelift-module = "0.130"
cranelift-native = "0.130"
winnow = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
faer = { version = "0.20", default-features = false, features = ["std", "svd", "qr", "evd", "cholesky", "lu"] }
wide = "1.3"
tracy-client = { version = "0.18", optional = true }
