[package]
name = "elodin-db"
version.workspace = true
repository.workspace = true
edition = "2021"
publish = true
description = "Elodin Database"
authors = ["sascha@elodin.systems", "akhil@elodin.systems", "van@elodin.systems"]

[package.metadata.wix]
upgrade-guid = "154415C8-2D06-41C4-87DA-A9AB1842801B"
path-guid = "1AF0FF55-0176-42C0-AD24-CF35FA4F1DC5"
license = false
eula = false

[dependencies]
# ser-de
impeller2.path = "../impeller2"
impeller2.features = ["std"]
impeller2-wkt.path = "../impeller2/wkt"
impeller2-cli = { path = "cli", default-features = false }
serde.version = "1.0"
serde.features = ["derive"]
postcard = "1.0"
nox.path = "../nox"
nox.default-features = false
zerocopy = "0.8"

# async
stellarator.path = "../stellarator"
stellarator.features = ["miette"]
impeller2-stella.path = "../impeller2/stella"
futures-lite = "2.5.0"

# data structures
memmap2 = "0.9"
dashmap = "6.1"
smallvec.version = "1.11.2"
smallvec.features = ["const_generics", "union", "serde"]
arc-swap = "1.7.1"

# errors
thiserror = "2"
miette.version = "7.2"
miette.features = ["fancy"]

# logs
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "chrono"] }

# rand
fastrand = "2.2.0"

# cli
clap.version = "4.4.18"
clap.features = ["derive"]
